Improve reporting on target rise-transit-set timelines.

--- a/pyephem_prototyping.ipynb
+++ b/pyephem_prototyping.ipynb
@@ -10,20 +10,7 @@
    "source": [
     "import ephem\n",
     "import math\n",
-    "import datetime, pytz\n",
-    "from astropysics.coords import FK5Coordinates"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "eqtrans = FK5Coordinates(\"17:6:32 +10.0 J2000.0\")\n",
-    "print eqtrans.ra, eqtrans.dec"
+    "import datetime, pytz"
    ]
   },
   {
@@ -36,18 +23,6 @@
    "source": [
     "p1 = ephem.Equatorial(\"17:6:32\", \"+0.0\", epoch=ephem.J2000)\n",
     "print p1.ra, p1.dec"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "p2 = ephem.Equatorial(str(eqtrans.ra.d), str(eqtrans.dec.d))\n",
-    "print p2.ra, p2.dec"
    ]
   },
   {
@@ -79,7 +54,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -222,17 +197,6 @@
    },
    "outputs": [],
    "source": [
-    "greenwich."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
     "print greenwich.next_transit(b1)"
    ]
   },
@@ -267,7 +231,7 @@
     "print cpn.alt, cpn.az\n",
     "print cpn.circumpolar, cpn.neverup\n",
     "print cpn.rise_time\n",
-    "print cpn.transit_alt\n"
+    "print cpn.transit_alt"
    ]
   },
   {
@@ -396,6 +360,18 @@
    },
    "outputs": [],
    "source": [
+    "func = getattr(greenwich, 'next_transit')\n",
+    "print func(eq_later).datetime()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
     "print cpn.transit_alt*180/math.pi"
    ]
   },
@@ -479,7 +455,7 @@
    },
    "outputs": [],
    "source": [
-    "greenwich.horizon "
+    "greenwich.horizon"
    ]
   },
   {
